k8s-basics/03.nginx-with-js copy.yaml
# Nginx Service for UI Code deployment
---
#Config Map for Nginx JS Module config
---
#Config Map for Nginx Config
---
# Nginx service Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-static-contents-js
  namespace: k8basics
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /index.html
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: nginx-configxml
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: nginx-configjs
              mountPath: /etc/nginx/njs/
      volumes:
        - name: nginx-configjs
          configMap:
            name: nginx-jsmodule-configmap
        - name: nginx-configxml
          configMap:
            name: nginx-configxml-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-static-contents-js
  namespace: k8basics
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: LoadBalancer
